# solana-mail-using-anchor

./: Anchor.toml
programs/solana-mail/: Cargo.toml
programs/solana-mail/src/: lib.rs
tests/: solana-mail.ts
